Fix inconsistent gap/margin compared to other elements on a standard block page

--- a/uubloomington/uubloomington/static/css/uubloomington.css
+++ b/uubloomington/uubloomington/static/css/uubloomington.css
@@ -968,6 +968,7 @@ footer .block-image img {
     padding: 1rem;
     background: #eeeeee;
     border-radius: var(--standard-radius);
+    margin-bottom: 0;
 }
 
 @container (max-width: 40rem) {
